--- a/index-test.html
+++ b/index-test.html
@@ -65,8 +65,8 @@
 									    </li>
 									
 										<li>
-										  <span class="icon fa-solid fa-b" style="margin-right: 0.5em;"></span>
-										  <div style="display: inline-block; vertical-align: middle;">
+										  <span class="icon"><i class="fas fa-bold"></i></span>
+										  <div style="display: inline-block; vertical-align: middle; margin-left: 0.5em;">
 										    <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit; font-weight: normal;">
 										      Booking
 										    </a>
@@ -81,6 +81,7 @@
 										    <span style="font-size: 0.8em;">(9,6/10) – 37 avis</span>
 										  </div>
 										</li>
+
 
 
 
