--- a/index-test.html
+++ b/index-test.html
@@ -64,26 +64,23 @@
 									      <span style="font-size: 0.8em;">(4,92/5) – 6 avis</span>
 									    </li>
 									
-										<li>
-										  <span class="icon"><i class="fas fa-bold"></i></span>
-										  <div style="display: inline-block; vertical-align: middle; margin-left: 0.5em;">
-										    <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit; font-weight: normal;">
-										      Booking
-										    </a>
-										    <br />
-										    <span class="stars" style="font-size: 0.8em;">
-										      <i class="fas fa-star color1"></i>
-										      <i class="fas fa-star color1"></i>
-										      <i class="fas fa-star color1"></i>
-										      <i class="fas fa-star color1"></i>
-										      <i class="fas fa-star-half-alt color1"></i>
-										    </span>
-										    <span style="font-size: 0.8em;">(9,6/10) – 37 avis</span>
-										  </div>
-										</li>
-
-
-
+									<li class="icon">
+									  <i class="fas fa-bold"></i>
+									  <div style="display: inline-block; vertical-align: middle; margin-left: 0.5em;">
+									    <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit; font-weight: normal;">
+									      Booking
+									    </a>
+									    <br />
+									    <span class="stars" style="font-size: 0.8em;">
+									      <i class="fas fa-star color1"></i>
+									      <i class="fas fa-star color1"></i>
+									      <i class="fas fa-star color1"></i>
+									      <i class="fas fa-star color1"></i>
+									      <i class="fas fa-star-half-alt color1"></i>
+									    </span>
+									    <span style="font-size: 0.8em;">(9,6/10) – 37 avis</span>
+									  </div>
+									</li>
 
 									  </ul>
 									</div>
