--- a/index-test.html
+++ b/index-test.html
@@ -13,79 +13,14 @@
     <div id="page-wrapper">
       <div id="wrapper">
 
-						<!-- Panel -->
-							<section class="panel color4-alt">
-								<div class="intro color4"><h2 class="major">Contactez-nous</h2>
-									<p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter. Vous pouvez également échanger avec Nestor, un assistant intelligent propulsé par ChatGPT, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.</p>
-									<ul class="actions">
-									  <li>
-									    <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contacter Nestor</a>
-									  </li>
-									</ul>
+						<!-- Panel (Spotlight) -->
+							<section class="panel spotlight large left">
+								<div class="content span-5">
+									<h2 class="major">Magna amet tempus</h2>
+									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
-								<div class="inner columns divided">
-									<div class="span-3-25">
-										<form method="post" action="#">
-											<div class="fields">
-												<div class="field half">
-													<label for="name">Nom</label>
-													<input type="text" name="name" id="name" />
-												</div>
-												<div class="field half">
-													<label for="email">Email</label>
-													<input type="email" name="email" id="email" />
-												</div>
-												<div class="field">
-													<label for="message">Message</label>
-													<textarea name="message" id="message" rows="4"></textarea>
-												</div>
-											</div>
-											<ul class="actions">
-												<li><input type="submit" value="Envoyer" class="button primary" /></li>
-											</ul>
-										</form>
-									</div>
-									<div class="span-1-5">
-									  <p>Consultez les avis laissés par nos précédents voyageurs :</p>
-									
-									<ul class="contact-icons color1">
-									  <li>
-									    <img src="images/logos/AIRBNB.png" alt="Logo Airbnb" style="width: 48px; height: 48px; border-radius: 50%; background: white; padding: 6px; box-sizing: border-box;">
-									    <div style="display: inline-block; vertical-align: middle; margin-left: 0.75em;">
-									      <a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit;">Airbnb</a>
-									      <br />
-									      <span class="stars" style="font-size: 0.8em;">
-									        <i class="fas fa-star color1"></i>
-									        <i class="fas fa-star color1"></i>
-									        <i class="fas fa-star color1"></i>
-									        <i class="fas fa-star color1"></i>
-									        <i class="fas fa-star-half-alt color1"></i>
-									      </span>
-									      <span style="font-size: 0.8em;">(4,92/5) – 6 avis</span>
-									    </div>
-									  </li>
-									
-									  <li style="margin-top: 1.5em;">
-									    <img src="images/logos/BOOKING.png" alt="Logo Booking" style="width: 48px; height: 48px; border-radius: 50%; background: white; padding: 6px; box-sizing: border-box;">
-									    <div style="display: inline-block; vertical-align: middle; margin-left: 0.75em;">
-									      <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit;">Booking</a>
-									      <br />
-									      <span class="stars" style="font-size: 0.8em;">
-									        <i class="fas fa-star color1"></i>
-									        <i class="fas fa-star color1"></i>
-									        <i class="fas fa-star color1"></i>
-									        <i class="fas fa-star color1"></i>
-									        <i class="fas fa-star-half-alt color1"></i>
-									      </span>
-									      <span style="font-size: 0.8em;">(9,6/10) – 37 avis</span>
-									    </div>
-									  </li>
-									</ul>
-
-									</div>
-
-
-
+								<div class="image filtered tinted" data-position="top right">
+									<img src="images/pic03.jpg" alt="" />
 								</div>
 							</section>
 
