--- a/index-test.html
+++ b/index-test.html
@@ -14,15 +14,39 @@
       <div id="wrapper">
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight large left">
-								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
-								</div>
-								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
-								</div>
-							</section>
+<section class="panel spotlight large left">
+  <div class="content span-5">
+    <h2 class="major">Équipements</h2>
+    <p>Cliquez sur une catégorie pour découvrir les équipements disponibles dans la villa :</p>
+
+    <div class="equipment-category">
+      <button class="toggle-btn">🍽️ Cuisine</button>
+      <ul class="toggle-content">
+        <li>Table à manger</li>
+        <li>Machine à café</li>
+        <li>Produits ménagers</li>
+        <li>Grille-pain</li>
+        <li>Plaque de cuisson</li>
+        <li>Four</li>
+        <li>Sèche-linge</li>
+        <li>Ustensiles de cuisine</li>
+        <li>Bouilloire électrique</li>
+        <li>Cuisine</li>
+        <li>Lave-linge</li>
+        <li>Lave-vaisselle</li>
+        <li>Micro-ondes</li>
+        <li>Réfrigérateur</li>
+      </ul>
+    </div>
+
+    <!-- Tu pourras copier-coller ce bloc pour d'autres catégories -->
+  </div>
+
+  <div class="image filtered tinted" data-position="top right">
+    <img src="images/pic03.jpg" alt="" />
+  </div>
+</section>
+
 
 
       </div>
