--- a/index-test.html
+++ b/index-test.html
@@ -58,5 +58,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/gallery.js"></script>
+    <script src="assets/js/equipements-toggle.js"></script>
+
   </body>
 </html>
