--- a/index-test.html
+++ b/index-test.html
@@ -19,82 +19,34 @@
     <h2 class="major">Équipements</h2>
     <p>Cliquez sur une catégorie pour découvrir les équipements disponibles dans la villa :</p>
 
-  <div class="equipment-category">
-    <button class="toggle-btn">🍽️ Cuisine</button>
-    <ul class="toggle-content">
-      <li>Table à manger</li>
-      <li>Machine à café</li>
-      <li>Produits ménagers</li>
-      <li>Grille-pain</li>
-      <li>Plaque de cuisson</li>
-      <li>Four</li>
-      <li>Sèche-linge</li>
-      <li>Ustensiles de cuisine</li>
-      <li>Bouilloire électrique</li>
-      <li>Cuisine</li>
-      <li>Lave-linge</li>
-      <li>Lave-vaisselle</li>
-      <li>Micro-ondes</li>
-      <li>Réfrigérateur</li>
-    </ul>
+    <div class="equipment-category">
+      <button class="toggle-btn">🍽️ Cuisine</button>
+      <ul class="toggle-content">
+        <li>Table à manger</li>
+        <li>Machine à café</li>
+        <li>Produits ménagers</li>
+        <li>Grille-pain</li>
+        <li>Plaque de cuisson</li>
+        <li>Four</li>
+        <li>Sèche-linge</li>
+        <li>Ustensiles de cuisine</li>
+        <li>Bouilloire électrique</li>
+        <li>Cuisine</li>
+        <li>Lave-linge</li>
+        <li>Lave-vaisselle</li>
+        <li>Micro-ondes</li>
+        <li>Réfrigérateur</li>
+      </ul>
+    </div>
+
+    <!-- Tu pourras copier-coller ce bloc pour d'autres catégories -->
   </div>
 
-  <div class="equipment-category">
-    <button class="toggle-btn">🛁 Salle de bain</button>
-    <ul class="toggle-content">
-      <li>Sèche-cheveux</li>
-      <li>Produits de nettoyage</li>
-      <li>Eau chaude</li>
-    </ul>
+  <div class="image filtered tinted" data-position="top right">
+    <img src="images/pic03.jpg" alt="" />
   </div>
+</section>
 
-  <div class="equipment-category">
-    <button class="toggle-btn">🛏️ Chambre et linge</button>
-    <ul class="toggle-content">
-      <li>Draps</li>
-      <li>Cintres</li>
-      <li>Oreillers et couvertures supplémentaires</li>
-      <li>Fer à repasser</li>
-      <li>Moustiquaire</li>
-      <li>Espaces de rangement</li>
-    </ul>
-  </div>
-
-  <div class="equipment-category">
-    <button class="toggle-btn">📺 Divertissement</button>
-    <ul class="toggle-content">
-      <li>Télévision</li>
-    </ul>
-  </div>
-
-  <div class="equipment-category">
-    <button class="toggle-btn">🌬️ Climatisation</button>
-    <ul class="toggle-content">
-      <li>Climatisation centrale</li>
-      <li>Ventilateur de plafond</li>
-    </ul>
-  </div>
-
-  <div class="equipment-category">
-    <button class="toggle-btn">🌴 Extérieur</button>
-    <ul class="toggle-content">
-      <li>Mobilier extérieur</li>
-      <li>Repas en plein air</li>
-      <li>Barbecue</li>
-      <li>Piscine privée</li>
-      <li>Entrée privée</li>
-    </ul>
-  </div>
-
-  <div class="equipment-category">
-    <button class="toggle-btn">🧾 Services</button>
-    <ul class="toggle-content">
-      <li>Wi-Fi</li>
-      <li>Logement fumeur</li>
-      <li>Parking gratuit sur place</li>
-    </ul>
-  </div>
-</div>
 
 
     <!-- Tu pourras copier-coller ce bloc pour d'autres catégories -->
