--- a/index-test.html
+++ b/index-test.html
@@ -6,65 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <style>
-      .equipment-btn {
-        padding: 0.8em 1.2em;
-        border: 1px solid #fff;
-        background: transparent;
-        color: #fff;
-        font-weight: 600;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background 0.2s;
-      }
-      .equipment-btn:hover {
-        background: rgba(255,255,255,0.1);
-      }
-
-      .equipment-popup {
-        display: none;
-        position: fixed;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        background: rgba(0, 0, 0, 0.6);
-        z-index: 9999;
-        justify-content: center;
-        align-items: center;
-      }
-      .popup-content {
-        background: #fff;
-        padding: 2em;
-        border-radius: 8px;
-        max-width: 500px;
-        width: 90%;
-        max-height: 80vh;
-        overflow-y: auto;
-        position: relative;
-        color: #333;
-      }
-      .close-popup {
-        position: absolute;
-        top: 10px;
-        right: 15px;
-        font-size: 1.5em;
-        cursor: pointer;
-      }
-    </style>
   </head>
   <body class="is-preload">
     <div id="page-wrapper">
       <div id="wrapper">
+        <!-- Équipements -->
         <section class="panel color1">
           <div class="inner">
             <header>
               <h2 class="major">🏠 Équipements de la villa</h2>
               <p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
             </header>
-            <div id="equipement-buttons" style="display: flex; flex-wrap: wrap; gap: 1em; justify-content: center;"></div>
+            <div id="equipement-buttons" class="actions" style="flex-wrap: wrap; justify-content: center; display: flex; gap: 1rem;"></div>
           </div>
         </section>
-        <div id="popups-container"></div>
+
+        <!-- Conteneur des popups -->
+        <div id="popup-container"></div>
       </div>
     </div>
 
@@ -73,7 +31,6 @@
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/gallery.js"></script>
     <script src="assets/js/equipements.js"></script>
   </body>
 </html>
