--- a/index-test.html
+++ b/index-test.html
@@ -6,6 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+      .equipment-popup {
+        display: none;
+        position: fixed;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+      }
+      .popup-content {
+        background: #fff;
+        padding: 2em;
+        border-radius: 8px;
+        max-width: 500px;
+        width: 90%;
+        max-height: 80vh;
+        overflow-y: auto;
+        position: relative;
+        color: #333;
+      }
+      .close-popup {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        font-size: 1.5em;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body class="is-preload">
     <div id="page-wrapper">
@@ -17,7 +47,7 @@
               <h2 class="major">🏠 Équipements de la villa</h2>
               <p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
             </header>
-            <div id="equipement-buttons" class="actions" style="flex-wrap: wrap; justify-content: center; display: flex; gap: 1rem;"></div>
+            <div id="equipment-buttons" class="actions" style="flex-wrap: wrap; justify-content: center; display: flex; gap: 1rem;"></div>
           </div>
         </section>
 
