--- a/index-test.html
+++ b/index-test.html
@@ -59,6 +59,27 @@
           </div>
         </section>
 
+        							<section class="panel spotlight large left">
+								<div class="content span-5">
+									<h2 class="major">Magna amet tempus</h2>
+									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+								</div>
+								<div class="image filtered tinted" data-position="top right">
+									<img src="images/pic03.jpg" alt="" />
+								</div>
+							</section>
+
+        <section class="panel spotlight large left">
+  <div class="content span-5">
+    <h2 class="major">🏠 Équipements de la villa</h2>
+    <p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
+    <div id="equipment-buttons" class="actions"></div>
+  </div>
+  <div class="image filtered tinted" data-position="top right">
+    <img src="images/pic03.jpg" alt="" />
+  </div>
+</section>
+
         <!-- Conteneur des popups -->
         <div id="popup-container"></div>
 
