--- a/index-test.html
+++ b/index-test.html
@@ -48,7 +48,7 @@
     <div id="page-wrapper">
       <div id="wrapper">
 
-        <!-- Équipements -->
+        <!-- Équipements
         <section class="panel color1">
           <div class="inner">
             <header>
@@ -57,17 +57,7 @@
             </header>
             <div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;"></div>
           </div>
-        </section>
-
-        							<section class="panel spotlight large left">
-								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
-								</div>
-								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
-								</div>
-							</section>
+        </section> -->
 
         <section class="panel spotlight large left">
   <div class="content span-5">
