--- a/index-test.html
+++ b/index-test.html
@@ -63,7 +63,7 @@
   <div class="content span-9">
     <h2 class="major">🏠 Équipements de la villa</h2>
     <p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
-    <div id="equipment-buttons" class="actions"></div>
+    <div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;"></div>
   </div>
   <div class="image filtered tinted" data-position="top right">
     <img src="images/pic03.jpg" alt="" />
