--- a/index-test.html
+++ b/index-test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <style>
+    <!-- <style>
       .equipment-popup {
         display: none;
         position: fixed;
@@ -42,30 +42,18 @@
         cursor: pointer;
         color: #111;
       }
-    </style>
+    </style> -->
   </head>
   <body class="is-preload">
     <div id="page-wrapper">
       <div id="wrapper">
-
-        <!-- Équipements
-        <section class="panel color1">
-          <div class="inner">
-            <header>
-              <h2 class="major">🏠 Équipements de la villa</h2>
-              <p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
-            </header>
-            <div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;"></div>
-          </div>
-        </section> -->
-
         <section class="panel spotlight large left">
-  <div class="content span-7">
-    <h2 class="major">🏠 Équipements de la villa</h2>
-    <p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
-    <div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; gap: 1rem;"></div>
-  </div>
-  <div class="image filtered tinted" data-position="top right">
+          <div class="content span-7">
+            <h2 class="major">🏠 Équipements de la villa</h2>
+            <p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
+          <div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; gap: 1rem;"></div>
+        </div>
+      <div class="image filtered tinted" data-position="top right">
     <img src="images/pic03.jpg" alt="" />
   </div>
 </section>
