--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<!-- Panel -->
 						        <section class="panel">
 						          <div class="intro color2">
-						            <h2 class="major">Galerie photos</h2>
+						            <h2 class="major">📷 Galerie photos</h2>
 						            <p>Découvrez la villa en images !<br>
 						            Cliquez simplement sur une photo pour lancer un diaporama et explorer chaque pièce ou espace sous tous ses angles.</p>
 						          </div>
