--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								</div>
 							</section>
 
-						<!-- Panel (Spotlight) -->
+						<!-- Panel (Spotlight)
 							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">Magna amet tempus</h2>
@@ -80,7 +80,21 @@
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
 								</div>
-							</section>
+							</section> -->
+
+						        <section class="panel spotlight large left">
+          							<div class="content span-7">
+            								<h2 class="major">🏠 Équipements de la villa</h2>
+            								<p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
+          								<div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; gap: 1rem;"></div>
+          							</div>
+          							<div class="image filtered tinted" data-position="top right">
+            								<img src="images/pic03.jpg" alt="" />
+          							</div>
+        						</section>
+
+						        <!-- Conteneur des popups -->
+						        <div id="popup-container"></div>
 
 						<!-- Panel -->
 						        <section class="panel">
@@ -254,6 +268,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/gallery.js"></script>
+			<script src="assets/js/equipements.js"></script>
 
 	</body>
 </html>
