--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
           							<div class="image filtered tinted" data-position="top right">
             								<img src="images/pic03.jpg" alt="" />
           							</div>
+								<div class="inner">
+								<div class="inner">
+									<ul class="grid-icons three connected">
+										<li><span class="icon solid fa-fan"><span class="label">Maison</span></span></li>
+										<li><span class="icon solid fa-swimming-pool"><span class="label">Chambre</span></span></li>
+										<li><span class="icon solid fa-hiking"><span class="label">Salle de bain</span></span></li>
+										<li><span class="icon solid fa-wifi"><span class="label">Wi-Fi</span></span></li>
+										<li><span class="icon solid fa-umbrella-beach"><span class="label">Terrasse</span></span></li>
+										<li><span class="icon solid fa-parking"><span class="label">Parking</span></span></li>
+									</ul>
+								</div>
         						</section>
 
 						        <!-- Conteneur des popups -->
