--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Bienvenue à<br /></h1>
+									<h1 class="major">Bienvenue à<br />
 									  <span class="themysion">Calypso Bay</span>
-									
+									</h1>
 									<p>Jolie villa bois d’architecte neuve, avec piscine à débordement et vue pleine mer sur les ilets pigeon et la réserve Cousteau.<br>
 									Villa à vivre en intérieur comme en extérieur, avec des prestations de qualité.<br>
 									Quartier calme et très agréable.</p>
