--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 										  <li style="margin-top: 1.5em;">
 										    <img src="images/logos/BOOKING.png" alt="Logo Booking" style="width: 48px; height: 48px; border-radius: 50%; background: white; padding: 6px; box-sizing: border-box;">
 										    <div style="display: inline-block; vertical-align: middle; margin-left: 0.75em;">
-										      <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit;">Booking</a>
+										      <a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html?aid=318615&label=New_French_FR_FR_21427169905-YP8jtirKV*kzSzTpDnHYDwSM640938627539%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg-7OU47I%401746097399-Share-51Qxi5%401746101264&sid=e3dc038a67f001d547f7fd0c6da767fb&checkin=2025-05-01&checkout=2025-05-02&dest_id=-1202523&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=1&hpos=1&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&soh=1&sr_order=popularity&srepoch=1746101403&srpvid=b15f55886e3d062f&type=total&ucfs=1&activeTab=main#hotelTmpl" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit;">Booking</a>
 										      <br />
 										      <span class="stars" style="font-size: 0.8em;">
 										        <i class="fas fa-star color1"></i>
