--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Wrapper -->
 					<div id="wrapper">
 
-						<!-- Panel (Banner) -->
+						<!-- ACCUEIL -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Bienvenue à<br />
@@ -39,7 +39,7 @@
 								</div>
 							</section>
 
-						<!-- Panel (Spotlight) -->
+						<!-- INTRODUCTION -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-9-5">
 									<h3 class="major">C’est avec grand plaisir que nous vous accueillons dans notre villa, conçue avec passion et soin. Nous espérons sincèrement que votre séjour y sera des plus agréables et qu’il vous apportera autant de bonheur qu’il nous en procure.</h3>
@@ -53,7 +53,7 @@
 								</div>
 							</section>
 
-						<!-- Panel -->
+						<!-- DESCRIPTION -->
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Amet lorem</h2>
@@ -71,18 +71,8 @@
 									</ul>
 								</div>
 							</section>
-
-						<!-- Panel (Spotlight)
-							<section class="panel spotlight large left">
-								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
-								</div>
-								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
-								</div>
-							</section> -->
-
+						
+						<!-- EQUIPEMENTS -->
 						        <section class="panel spotlight large left">
           							<div class="content span-8">
             								<h2 class="major">🏠 Équipements de la villa</h2>
@@ -104,10 +94,10 @@
           							</div>
         						</section>
 
-						        <!-- Conteneur des popups -->
+						 <!-- Conteneur des popups -->
 						        <div id="popup-container"></div>
 
-						<!-- Panel -->
+						<!-- GALERIE PHOTOS -->
 						        <section class="panel">
 						          <div class="intro color2">
 						            <h2 class="major">📷 Galerie photos</h2>
@@ -195,7 +185,7 @@
 						      <!-- </div>
 						    </div> -->
 
-						<!-- Panel -->
+						<!-- CONTACT -->
 							<section class="panel color4-alt">
 								<div class="intro color4"><h2 class="major">📧 Contactez-nous</h2>
 									<p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter. Vous pouvez également échanger avec Nestor, un assistant intelligent propulsé par ChatGPT, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.</p>
@@ -266,7 +256,7 @@
 								</div>
 							</section>
 						
-						<!-- Copyright -->
+						<!-- COPYRIGHT -->
 							<div class="copyright">&copy; Calypso Bay | Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 					</div>
