--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             								<p>Explorez les différentes catégories d'équipements en cliquant sur un bouton :</p>
           								<div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; gap: 1rem;"></div>
           							</div>
-          							<div class="image filtered tinted" data-position="top right">
+          							<div class="image filtered tinted" data-position="center">
             								<img src="images/pic04.jpg" alt="" />
           							</div>
         						</section>
