--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</div>
 							</section>
 
-						<!-- DESCRIPTION -->
+						<!-- DESCRIPTION
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Amet lorem</h2>
@@ -70,7 +70,34 @@
 										<li><span class="icon solid fa-parking"><span class="label">Parking</span></span></li>
 									</ul>
 								</div>
+							</section> -->
+
+						<!-- DESCRIPTION -->
+							<section class="panel color1">
+								<div class="intro joined">
+									<h2 class="major">Caractéristiques de la villa</h2>
+									<p>
+										Villa contemporaine de 180 m² située sur un terrain de 1 350 m², idéale pour accueillir jusqu’à 6 personnes. Elle comprend 3 chambres de 15 m² avec salles de bains privatives, une grande terrasse extérieure de 50 m² avec piscine privée, un parking pour 3 voitures, ainsi que des équipements modernes et autonomes tels que deux réserves d’eau et un chauffe-eau solaire.
+									</p>
+								</div>
+								<div class="inner">
+									<ul class="grid-icons three connected">
+										<li><span class="icon solid fa-home"><span class="label">180 m²</span></span></li>
+										<li><span class="icon solid fa-bed"><span class="label">3 chambres</span></span></li>
+										<li><span class="icon solid fa-shower"><span class="label">3 salles de bains</span></span></li>
+										<li><span class="icon solid fa-toilet"><span class="label">WC indépendant</span></span></li>
+										<li><span class="icon solid fa-umbrella-beach"><span class="label">Terrasse 50 m²</span></span></li>
+										<li><span class="icon solid fa-swimming-pool"><span class="label">Piscine privée</span></span></li>
+										<li><span class="icon solid fa-tree"><span class="label">Jardin 1 350 m²</span></span></li>
+										<li><span class="icon solid fa-parking"><span class="label">Parking 3 voitures</span></span></li>
+										<li><span class="icon solid fa-battery-full"><span class="label">Réserves d'eau</span></span></li>
+										<li><span class="icon solid fa-solar-panel"><span class="label">Chauffe-eau solaire</span></span></li>
+										<li><span class="icon solid fa-users"><span class="label">6 personnes</span></span></li>
+										<li><span class="icon solid fa-wifi"><span class="label">Wi-Fi</span></span></li>
+									</ul>
+								</div>
 							</section>
+
 						
 						<!-- EQUIPEMENTS -->
 						        <section class="panel spotlight large left">
