--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<!-- DESCRIPTION -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Caractéristiques de la villa</h2>
+									<h2 class="major">📋 Caractéristiques de la villa</h2>
 									<p>
 										Villa contemporaine de 180 m² située sur un terrain de 1 350 m², idéale pour accueillir jusqu’à 6 personnes. Elle comprend 3 chambres de 15 m² avec salles de bains privatives, une grande terrasse extérieure de 50 m² avec piscine privée, un parking pour 3 voitures, ainsi que des équipements modernes et autonomes tels que deux réserves d’eau et un chauffe-eau solaire.
 									</p>
