--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 									<h1 class="major">Bienvenue à<br />
 									  <span class="themysion">Calypso Bay</span>
 									</h1>
-									<p>Jolie villa bois d’architecte neuve, avec piscine à débordement et vue pleine mer sur les ilets pigeon et la réserve Cousteau.<br>
-									Villa à vivre en intérieur comme en extérieur, avec des prestations de qualité.<br>
-									Quartier calme et très agréable.</p>
+									<p>Jolie villa bois d’architecte, neuve et contemporaine, avec piscine à débordement et vue imprenable sur la mer, les îlets Pigeon et la réserve Cousteau.<br>
+									Pensée pour une vie dedans-dehors, elle offre des prestations de qualité dans un quartier résidentiel calme et très agréable.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
