--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</section> -->
 
 						<!-- DESCRIPTION -->
-							<section class="panel color1">
+							<section class="panel medium color1">
 								<div class="intro joined">
 									<h2 class="major">📋 Caractéristiques de la villa</h2>
 									<p>
