--- a/index-en.html
+++ b/index-en.html
@@ -102,65 +102,65 @@
 						          </div>
 						          <div class="gallery">
 						            <div class="group span-3">
-						              <a href="#" class="image filtered span-3" data-room="Salon" data-position="center">
-						                <img src="images/gallery/thumbs/01.jpg" alt="Salon" />
-						                <div class="caption">Salon</div>
+						              <a href="#" class="image filtered span-3" data-room="Living room" data-position="center">
+						                <img src="images/gallery/thumbs/01.jpg" alt="Living room" />
+						                <div class="caption">Living room</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Cuisine" data-position="center">
-						                <img src="images/gallery/thumbs/02.jpg" alt="Cuisine" />
-						                <div class="caption">Cuisine</div>
+						              <a href="#" class="image filtered span-1-5" data-room="Kitchen" data-position="center">
+						                <img src="images/gallery/thumbs/02.jpg" alt="Kitchen" />
+						                <div class="caption">Kitchen</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Espace-repas" data-position="center">
-						                <img src="images/gallery/thumbs/03.jpg" alt="Espace repas" />
-						                <div class="caption">Espace repas</div>
-						              </a>
-						            </div>
-						            <a href="#" class="image filtered span-1-5" data-room="Chambre1" data-position="center">
-						              <img src="images/gallery/thumbs/04.jpg" alt="Chambre 1" />
-						              <div class="caption">Chambre 1</div>
-						            </a>
-						            <div class="group span-4-5">
-						              <a href="#" class="image filtered span-3" data-room="Chambre2" data-position="center">
-						                <img src="images/gallery/thumbs/05.jpg" alt="Chambre 2" />
-						                <div class="caption">Chambre 2</div>
-						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Chambre3" data-position="center">
-						                <img src="images/gallery/thumbs/06.jpg" alt="Chambre 3" />
-						                <div class="caption">Chambre 3</div>
-						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="SDB1" data-position="center">
-						                <img src="images/gallery/thumbs/07.jpg" alt="Salle de bain 1" />
-						                <div class="caption">Salle de bain 1</div>
-						              </a>
-						              <a href="#" class="image filtered span-3" data-room="SDB2" data-position="center">
-						                <img src="images/gallery/thumbs/08.jpg" alt="Salle de bain 2" />
-						                <div class="caption">Salle de bain 2</div>
+						              <a href="#" class="image filtered span-1-5" data-room="Dining area" data-position="center">
+						                <img src="images/gallery/thumbs/03.jpg" alt="Dining area" />
+						                <div class="caption">Dining area</div>
 						              </a>
 						            </div>
-						            <a href="#" class="image filtered span-1-5" data-room="SDB3" data-position="center">
-						              <img src="images/gallery/thumbs/09.jpg" alt="Salle de bain 3" />
-						              <div class="caption">Salle de bain 3</div>
+						            <a href="#" class="image filtered span-1-5" data-room="Bedroom 1" data-position="center">
+						              <img src="images/gallery/thumbs/04.jpg" alt="Bedroom 1" />
+						              <div class="caption">Bedroom 1</div>
 						            </a>
 						            <div class="group span-4-5">
-						              <a href="#" class="image filtered span-3" data-room="Jardin" data-position="center">
-						                <img src="images/gallery/thumbs/10.jpg" alt="Jardin" />
-						                <div class="caption">Jardin</div>
+						              <a href="#" class="image filtered span-3" data-room="Bedroom 2" data-position="center">
+						                <img src="images/gallery/thumbs/05.jpg" alt="Bedroom 2" />
+						                <div class="caption">Bedroom 2</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Terasse" data-position="center">
-						                <img src="images/gallery/thumbs/11.jpg" alt="Terrasse" />
-						                <div class="caption">Terrasse</div>
+						              <a href="#" class="image filtered span-1-5" data-room="Bedroom 3" data-position="center">
+						                <img src="images/gallery/thumbs/06.jpg" alt="Bedroom 3" />
+						                <div class="caption">Bedroom 3</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Exterieur" data-position="center">
-						                <img src="images/gallery/thumbs/12.jpg" alt="Extérieur" />
-						                <div class="caption">Extérieur</div>
+						              <a href="#" class="image filtered span-1-5" data-room="Bathroom 1" data-position="center">
+						                <img src="images/gallery/thumbs/07.jpg" alt="Bathroom 1" />
+						                <div class="caption">Bathroom 1</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Piscine" data-position="center">
-						                <img src="images/gallery/thumbs/13.jpg" alt="Piscine" />
-						                <div class="caption">Piscine</div>
+						              <a href="#" class="image filtered span-3" data-room="Bathroom 2" data-position="center">
+						                <img src="images/gallery/thumbs/08.jpg" alt="Bathroom 2" />
+						                <div class="caption">Bathroom 2</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Autres" data-position="center">
-						                <img src="images/gallery/thumbs/14.jpg" alt="Autres" />
-						                <div class="caption">Autres</div>
+						            </div>
+						            <a href="#" class="image filtered span-1-5" data-room="Bathroom 3" data-position="center">
+						              <img src="images/gallery/thumbs/09.jpg" alt="Bathroom 3" />
+						              <div class="caption">Bathroom 3</div>
+						            </a>
+						            <div class="group span-4-5">
+						              <a href="#" class="image filtered span-3" data-room="Garden" data-position="center">
+						                <img src="images/gallery/thumbs/10.jpg" alt="Garden" />
+						                <div class="caption">Garden</div>
+						              </a>
+						              <a href="#" class="image filtered span-1-5" data-room="Terrace" data-position="center">
+						                <img src="images/gallery/thumbs/11.jpg" alt="Terrace" />
+						                <div class="caption">Terrace</div>
+						              </a>
+						              <a href="#" class="image filtered span-1-5" data-room="Exterior" data-position="center">
+						                <img src="images/gallery/thumbs/12.jpg" alt="Exterior" />
+						                <div class="caption">Exterior</div>
+						              </a>
+						              <a href="#" class="image filtered span-1-5" data-room="Pool" data-position="center">
+						                <img src="images/gallery/thumbs/13.jpg" alt="Pool" />
+						                <div class="caption">Pool</div>
+						              </a>
+						              <a href="#" class="image filtered span-1-5" data-room="Others" data-position="center">
+						                <img src="images/gallery/thumbs/14.jpg" alt="Others" />
+						                <div class="caption">Others</div>
 						              </a>
 						            </div>
 						          </div>
@@ -183,7 +183,7 @@
 									<p>For any questions or inquiries, feel free to contact us. You can also chat with Nestor, a smart assistant powered by ChatGPT, available anytime to inform you about the villa, its amenities or nearby activities.</p>
 									<ul class="actions">
 									  <li>
-									    <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contacter Nestor</a>
+									    <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contact Nestor</a>
 									  </li>
 									</ul>
 								</div>
