--- a/index-en.html
+++ b/index-en.html
@@ -102,63 +102,63 @@
 						          </div>
 						          <div class="gallery">
 						            <div class="group span-3">
-						              <a href="#" class="image filtered span-3" data-room="Living room" data-position="center">
+						              <a href="#" class="image filtered span-3" data-room="Salon" data-position="center">
 						                <img src="images/gallery/thumbs/01.jpg" alt="Living room" />
 						                <div class="caption">Living room</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Kitchen" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Cuisine" data-position="center">
 						                <img src="images/gallery/thumbs/02.jpg" alt="Kitchen" />
 						                <div class="caption">Kitchen</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Dining area" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Espace-repas" data-position="center">
 						                <img src="images/gallery/thumbs/03.jpg" alt="Dining area" />
 						                <div class="caption">Dining area</div>
 						              </a>
 						            </div>
-						            <a href="#" class="image filtered span-1-5" data-room="Bedroom 1" data-position="center">
+						            <a href="#" class="image filtered span-1-5" data-room="Chambre1" data-position="center">
 						              <img src="images/gallery/thumbs/04.jpg" alt="Bedroom 1" />
 						              <div class="caption">Bedroom 1</div>
 						            </a>
 						            <div class="group span-4-5">
-						              <a href="#" class="image filtered span-3" data-room="Bedroom 2" data-position="center">
+						              <a href="#" class="image filtered span-3" data-room="Chambre2" data-position="center">
 						                <img src="images/gallery/thumbs/05.jpg" alt="Bedroom 2" />
 						                <div class="caption">Bedroom 2</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Bedroom 3" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Chambre3" data-position="center">
 						                <img src="images/gallery/thumbs/06.jpg" alt="Bedroom 3" />
 						                <div class="caption">Bedroom 3</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Bathroom 1" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="SDB1" data-position="center">
 						                <img src="images/gallery/thumbs/07.jpg" alt="Bathroom 1" />
 						                <div class="caption">Bathroom 1</div>
 						              </a>
-						              <a href="#" class="image filtered span-3" data-room="Bathroom 2" data-position="center">
+						              <a href="#" class="image filtered span-3" data-room="SDB2" data-position="center">
 						                <img src="images/gallery/thumbs/08.jpg" alt="Bathroom 2" />
 						                <div class="caption">Bathroom 2</div>
 						              </a>
 						            </div>
-						            <a href="#" class="image filtered span-1-5" data-room="Bathroom 3" data-position="center">
+						            <a href="#" class="image filtered span-1-5" data-room="SDB3" data-position="center">
 						              <img src="images/gallery/thumbs/09.jpg" alt="Bathroom 3" />
 						              <div class="caption">Bathroom 3</div>
 						            </a>
 						            <div class="group span-4-5">
-						              <a href="#" class="image filtered span-3" data-room="Garden" data-position="center">
+						              <a href="#" class="image filtered span-3" data-room="Jardin" data-position="center">
 						                <img src="images/gallery/thumbs/10.jpg" alt="Garden" />
 						                <div class="caption">Garden</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Terrace" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Terasse" data-position="center">
 						                <img src="images/gallery/thumbs/11.jpg" alt="Terrace" />
 						                <div class="caption">Terrace</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Exterior" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Exterieur" data-position="center">
 						                <img src="images/gallery/thumbs/12.jpg" alt="Exterior" />
 						                <div class="caption">Exterior</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Pool" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Piscine" data-position="center">
 						                <img src="images/gallery/thumbs/13.jpg" alt="Pool" />
 						                <div class="caption">Pool</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Others" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Autres" data-position="center">
 						                <img src="images/gallery/thumbs/14.jpg" alt="Others" />
 						                <div class="caption">Others</div>
 						              </a>
