--- a/index-en.html
+++ b/index-en.html
@@ -224,7 +224,7 @@
 										        <i class="fas fa-star color1"></i>
 										        <i class="fas fa-star-half-alt color1"></i>
 										      </span>
-										      <span style="font-size: 0.8em;">(4,92/5) – 6 avis</span>
+										      <span style="font-size: 0.8em;">(4,92/5) – 6 reviews</span>
 										    </div>
 										  </li>
 										
@@ -240,7 +240,7 @@
 										        <i class="fas fa-star color1"></i>
 										        <i class="fas fa-star-half-alt color1"></i>
 										      </span>
-										      <span style="font-size: 0.8em;">(9,6/10) – 37 avis</span>
+										      <span style="font-size: 0.8em;">(9,6/10) – 37 reviews</span>
 										    </div>
 										  </li>
 										</ul>
