--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 									  <span class="themysion">Calypso Bay</span>
 									</h1>
 									<p>Jolie villa bois d’architecte, neuve et contemporaine, avec piscine à débordement et vue imprenable sur la mer, les îlets Pigeon et la réserve Cousteau.<br>
-									Pensée pour une vie dedans-dehors, elle offre des prestations de qualité dans un quartier résidentiel calme et très agréable.</p>
+									Pensée pour une vie dedans-dehors, elle offre des prestations de qualité dans un quartier résidentiel calme et très agréable.<br><br>
+									<a href="index-en.html" title="English version" style="text-decoration: none; font-size: 1.2em;">🇬🇧</a>
+									&nbsp;
+									<a href="index-de.html" title="Deutsche Version" style="text-decoration: none; font-size: 1.2em;">🇩🇪</a></p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
