--- a/index-en.html
+++ b/index-en.html
@@ -29,6 +29,15 @@
 									</h1>
 									<p>Beautiful wooden architect-designed villa, new and contemporary, with an infinity pool and breathtaking views of the sea, the Pigeon islets and the Cousteau reserve.<br>
 									Designed for indoor-outdoor living, it offers quality amenities in a quiet and pleasant residential neighborhood.</p>
+									<p>
+									  <a href="index.html" title="French version">
+									    <img src="https://flagcdn.com/fr.svg" width="32" height="24" alt="French flag" style="vertical-align: middle;">
+									  </a>
+									  &nbsp;
+									  <a href="index-de.html" title="Deutsche Version">
+									    <img src="https://flagcdn.com/de.svg" width="32" height="24" alt="German flag" style="vertical-align: middle;">
+									  </a>
+									</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
