--- a/index-de.html
+++ b/index-de.html
@@ -35,7 +35,7 @@
 									  </a>
 									  &nbsp;
 									  <a href="index.html" title="Französische Version">
-									    <img src="https://flagcdn.com/de.svg" width="32" height="24" alt="German flag" style="vertical-align: middle;">
+									    <img src="https://flagcdn.com/fr.svg" width="32" height="24" alt="French flag" style="vertical-align: middle;">
 									  </a>
 									</p>
 									<ul class="actions">
@@ -233,7 +233,7 @@
 										        <i class="fas fa-star color1"></i>
 										        <i class="fas fa-star-half-alt color1"></i>
 										      </span>
-										      <span style="font-size: 0.8em;">(4,92/5) – 6 avis</span>
+										      <span style="font-size: 0.8em;">(4,92/5) – 6 Bewertungen</span>
 										    </div>
 										  </li>
 										
@@ -249,7 +249,7 @@
 										        <i class="fas fa-star color1"></i>
 										        <i class="fas fa-star-half-alt color1"></i>
 										      </span>
-										      <span style="font-size: 0.8em;">(9,6/10) – 37 avis</span>
+										      <span style="font-size: 0.8em;">(9,6/10) – 37 Bewertungen</span>
 										    </div>
 										  </li>
 										</ul>
